<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkblue_rounded_bg"
    tools:context=".ui.signup.SignUpActivity">
    <ImageView
        android:layout_width="470dp"
        android:layout_height="470dp"
        android:layout_marginBottom="292dp"
        android:src="@drawable/signup_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/white_rounded_bg"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_name"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_email"
            app:layout_constraintTop_toBottomOf="@id/input_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/white"
            android:text="@string/action_signup"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/input_confirm_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>