<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkblue_rounded_bg"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        style="@style/WhiteLargeBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/WhiteMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkmode"
        style="@style/WhiteMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/WhiteMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_darkmode"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_darkmode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_darkmode" />
    
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_logout"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="@id/tv_logout"
        app:layout_constraintBottom_toBottomOf="@id/tv_logout"
        app:layout_constraintStart_toEndOf="@id/tv_logout"
        android:contentDescription="@string/btn_logout"/>

</androidx.constraintlayout.widget.ConstraintLayout>