<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="120dp"
    app:cardBackgroundColor="@color/dark_blue"
    app:cardCornerRadius="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="9dp">

        <ImageView
            android:id="@+id/iv_vehicle"
            android:layout_width="38dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_vehicle_type"
            style="@style/WhiteMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vehicle"
            app:layout_constraintStart_toEndOf="@id/iv_vehicle"
            app:layout_constraintTop_toTopOf="@+id/iv_vehicle"
            android:layout_marginStart="9dp"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linear_pb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:progress="18"
            app:indicatorColor="@color/brown"
            app:layout_constraintTop_toBottomOf="@id/iv_vehicle"
            app:trackColor="@color/white"
            app:trackCornerRadius="50dp"
            app:trackThickness="7dp" />

        <TextView
            android:id="@+id/tv_total_percentage"
            style="@style/WhiteLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/total_percentage"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_pb" />

        <TextView
            style="@style/WhiteMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_emission_mass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_pb"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
